--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "*.m": "matlab",
-        "deque": "cpp",
-        "vector": "cpp"
+        "iostream": "cpp"
     }
 }
