--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "*.m": "matlab",
+        "iostream": "cpp",
+        "ios": "cpp"
     }
 }
