--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,65 @@
 #CMake最低版本要求
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.10)
 
 #项目信息
 project(vision)
 
-#查找当前目录下的所有源文件
+#加入头文件
+#FILE(GLOB headers "Codes/*/include/*.h")
+#MESSAGE( STATUS "source file = ${headers}.")
+#set(header2son "${headers}" CACHE INTERNAL "头文件传递")
+
+#-----------------------------------------------------------
+#C++版本
+add_definitions(-std=c++11)
 #将名称存入DIR_SRCS中
 aux_source_directory(. DIR_SRCS)
+#-----------------------------------------------------------
+#加入include文件
+include_directories(Codes/Camera/include
+                    Codes/Can/include
+                    Codes/Preprocess/include
+                    Codes/Energy/include
+                    Codes/Kalman/include
+                    Codes/ArmorFinder/include
+                    Codes/Tools/include
+                    Codes/Number/include
+                    .)
+#-----------------------------------------------------------
+#连接标准库
+#link_libraries(stdio string stdlib iostream thread iomanip)
+#-----------------------------------------------------------
+#连接相机库
+link_directories(Codes/Camera/lib)
+link_libraries(MvCameraControl)
 
-#加入一个配置头文件，用于处理CMAKE对源码的设置
-configure_file(
-"${PROJECT_SOURCE_DIR}/config.h.in"
-"${PROJECT_SOURCE_DIR}/config.h"
-)
+#-----------------------------------------------------------
+#连接thread
+find_package (Threads REQUIRED)
+#-----------------------------------------------------------
+#链接opencv
+#find_package (PkgConfig REQUIRED)
+#pkg_search_module(OPENCVPC REQUIRED opencv)
 
-#是否使用自己的CAMERA库
-option(USE_CAMERA "Use Provided Camera implementation" ON)
-
-#是否加入Camera库
-if(USE_CAMERA)
-include_directories("${PROJECT_SOURCE_DIR}/Camera")
+find_package (OpenCV REQUIRED)
+link_libraries(opencv_tracking)
+#include_directories(${OPENCV_INCLUDE_DIRS})
+#-----------------------------------------------------------
 #添加子目录
-add_subdirectory(Camera)
-set(EXTRA_LIBS $(EXTRA_LIBS)CameraInit)
-endif(USE_CAMERA)
+add_subdirectory(Codes)
 
-
+#-----------------------------------------------------------
 #指定生成目标
-add_executable(vision main.cpp)
+add_executable(vision main.cpp main.h)
 
 #添加链接库
-target_link_libraries(vision CameraInit)
+target_link_libraries(vision
+                    ${OPENCVPC_LIBRARIES}
+                    camera
+                    armor_finder
+                    manifold_can
+                    kalman
+                    number
+                    preprocess
+                    tools
+                    Threads::Threads)
