--- a/config.h.in
+++ b/config.h.in
@@ -1,1 +1,3 @@
-#cmakedefine USE_CAMERA
+// the configured options and settings for Tutorial
+#define Tutorial_VERSION_MAJOR @Tutorial_VERSION_MAJOR@
+#define Tutorial_VERSION_MINOR @Tutorial_VERSION_MINOR@
